--- a/Core/View/EditSettings.html.twig
+++ b/Core/View/EditSettings.html.twig
@@ -30,7 +30,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-11 text-right">
+            <div class="col-11 text-end">
                 <h1 class="h4">
                     {{ fsc.title }}
                     <i class="{{ pageData.icon }} fa-fw" aria-hidden="true"></i>
