--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -36,7 +36,7 @@
                             <h1 class="h3 mb-3">
                                 <i class="{{ fsc.getPageData().icon }}"></i> {{ fsc.title }}
                             </h1>
-                            <div class="form-row">
+                            <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         {{ i18n.trans('company') }}
@@ -82,7 +82,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-row align-items-end">
+                            <div class="row align-items-end">
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         {{ i18n.trans('serie') }}
