--- a/Core/View/SendMail.html.twig
+++ b/Core/View/SendMail.html.twig
@@ -129,7 +129,7 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                                <div class="col-sm-6 text-right">
+                                <div class="col-sm-6 text-end">
                                     <button type="submit" class="btn btn-primary">
                                         <i class="fas fa-envelope fa-fw"
                                            aria-hidden="true"></i> {{ i18n.trans('send') }}
