--- a/Core/View/Tab/RefundFacturaProveedor.html.twig
+++ b/Core/View/Tab/RefundFacturaProveedor.html.twig
@@ -47,18 +47,18 @@
                 <th>{{ i18n.trans('code') }}</th>
                 <th>{{ i18n.trans('numsupplier') }}</th>
                 <th>{{ i18n.trans('observations') }}</th>
-                <th class="text-right">{{ i18n.trans('total') }}</th>
-                <th class="text-right">{{ i18n.trans('date') }}</th>
+                <th class="text-end">{{ i18n.trans('total') }}</th>
+                <th class="text-end">{{ i18n.trans('date') }}</th>
             </tr>
             </thead>
             <tbody>
             {% for rectified in currentView.cursor %}
-                <tr class="table-danger clickableRow" data-href="{{ rectified.url() }}">
+                <tr class="table-danger clickableRow" data-bs-href="{{ rectified.url() }}">
                     <td>{{ rectified.codigo }}</td>
                     <td>{{ rectified.numproveedor | raw }}</td>
                     <td>{{ rectified.observaciones | raw }}</td>
-                    <td class="text-right">{{ fsc.toolBox().coins().format(rectified.total) }}</td>
-                    <td class="text-right">{{ rectified.fecha }}</td>
+                    <td class="text-end">{{ fsc.toolBox().coins().format(rectified.total) }}</td>
+                    <td class="text-end">{{ rectified.fecha }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="card-body">
                         <p>{{ i18n.trans('rectified-invoice-p') }}</p>
-                        <div class="form-row align-items-end">
+                        <div class="row align-items-end">
                             <div class="col-sm">
                                 <div class="form-group">
                                     {{ i18n.trans('serie') }}
@@ -110,11 +110,11 @@
                                     <input type="text" name="numproveedor" class="form-control" maxlength="50">
                                 </div>
                             </div>
-                            <div class="col-sm text-right">
+                            <div class="col-sm text-end">
                                 <div class="btn-group mb-3">
                                     <div class="dropdown">
                                         <button class="btn btn-secondary dropdown-toggle" type="button"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <i class="fas fa-check-square fa-fw"></i> {{ i18n.trans('select') }}
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-right">
@@ -128,7 +128,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-group mb-3">
-                                    <button type="submit" class="btn btn-warning ml-3">
+                                    <button type="submit" class="btn btn-warning ms-3">
                                         <i class="fas fa-save fa-fw" aria-hidden="true"></i> {{ i18n.trans('save') }}
                                     </button>
                                 </div>
@@ -140,9 +140,9 @@
                             <thead>
                             <tr>
                                 <th>{{ i18n.trans('description') }}</th>
-                                <th class="text-right">{{ i18n.trans('quantity') }}</th>
-                                <th class="text-right">{{ i18n.trans('to-refund') }}</th>
-                                <th class="text-right">{{ i18n.trans('refund-amount') }}</th>
+                                <th class="text-end">{{ i18n.trans('quantity') }}</th>
+                                <th class="text-end">{{ i18n.trans('to-refund') }}</th>
+                                <th class="text-end">{{ i18n.trans('refund-amount') }}</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -153,7 +153,7 @@
                                         <a href="{{ line.getProducto().url() }}">{{ line.referencia }}</a>
                                         {{ line.descripcion | raw }}
                                     </td>
-                                    <td class="align-middle text-right">
+                                    <td class="align-middle text-end">
                                         {{ fsc.toolBox().numbers().format(line.cantidad) }}
                                     </td>
                                     <td class="table-warning">
@@ -161,14 +161,14 @@
                                         {% if line.cantidad > 0 %}
                                             <input type="number" name="refund_{{ line.primaryColumnValue() }}"
                                                    value="0" min="0" max="{{ line.cantidad - refunded }}" step="any"
-                                                   class="form-control text-right to_refund" autocomplete="off"/>
+                                                   class="form-control text-end to_refund" autocomplete="off"/>
                                         {% else %}
                                             <input type="number" name="refund_{{ line.primaryColumnValue() }}"
-                                                   value="0" step="any" class="form-control text-right to_refund"
+                                                   value="0" step="any" class="form-control text-end to_refund"
                                                    autocomplete="off"/>
                                         {% endif %}
                                     </td>
-                                    <td class="align-middle table-warning text-right">
+                                    <td class="align-middle table-warning text-end">
                                         {% if refunded == 0 %}
                                             -
                                         {% else %}
