--- a/Core/View/Master/EditViewReadOnly.html.twig
+++ b/Core/View/Master/EditViewReadOnly.html.twig
@@ -32,13 +32,13 @@
     <div class="{{ currentView.settings.card ? 'card shadow' : '' }}">
         <div class="{{ currentView.settings.card ? 'card-body' : 'container-fluid' }}">
             <div class="row">
-                <div class="col-12 text-right">
+                <div class="col-12 text-end">
                     {# -- Row statistics -- #}
                     {% set row = currentView.getRow('statistics') %}
                     {{ row.render(fsc) | raw }}
                 </div>
             </div>
-            <div class="form-row">
+            <div class="row">
                 {% for group in currentView.getColumns() %}
                     {{ group.edit(currentView.model, true) | raw }}
                 {% endfor %}
