--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col mb-2">
                     <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-magic fa-fw"></i> {{ i18n.trans('generate') }}
                         </button>
@@ -63,9 +63,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col text-right mb-2">
+                <div class="col text-end mb-2">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown"
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-check-square fa-fw"></i> {{ i18n.trans('selected-quantity') }}
                         </button>
@@ -101,8 +101,8 @@
                 <div class="col mt-3">
                     <div class="card border-success shadow mb-2">
                         <div class="card-body p-2">
-                            <button class="btn btn-sm btn-outline-success" type="button" data-toggle="collapse"
-                                    data-target="#moreDocsCollapse" aria-expanded="false">
+                            <button class="btn btn-sm btn-outline-success" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#moreDocsCollapse" aria-expanded="false">
                                 <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
                                 {{ i18n.trans('more') }}
                             </button>
@@ -117,11 +117,11 @@
                                     <table class="table table-hover mb-0">
                                         <thead>
                                         <tr>
-                                            <th><input type="checkbox" onclick="checkAllDoc(this)" class="ml-1"></th>
+                                            <th><input type="checkbox" onclick="checkAllDoc(this)" class="ms-1"></th>
                                             <th>{{ i18n.trans('code') }}</th>
                                             <th>{{ i18n.trans('observations') }}</th>
-                                            <th class="text-right">{{ i18n.trans('total') }}</th>
-                                            <th class="text-right">{{ i18n.trans('date') }}</th>
+                                            <th class="text-end">{{ i18n.trans('total') }}</th>
+                                            <th class="text-end">{{ i18n.trans('date') }}</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -137,8 +137,8 @@
                                                     <a href="{{ doc.url() }}">{{ doc.codigo }}</a>
                                                 </td>
                                                 <td>{{ doc.observaciones | slice(0, 60) | raw }}</td>
-                                                <td class="text-right text-nowrap">{{ fsc.toolBox().coins().format(doc.total) }}</td>
-                                                <td class="text-right text-nowrap">{{ doc.fecha }}</td>
+                                                <td class="text-end text-nowrap">{{ fsc.toolBox().coins().format(doc.total) }}</td>
+                                                <td class="text-end text-nowrap">{{ doc.fecha }}</td>
                                             </tr>
                                         {% else %}
                                             <tr class="table-warning">
@@ -222,7 +222,7 @@
                         <p>{{ doc.observaciones | raw }}</p>
                     {% endif %}
                 </div>
-                <div class="col-sm-3 text-right">
+                <div class="col-sm-3 text-end">
                     <p class="small mb-0">
                         <i class="far fa-calendar-alt fa-fw" aria-hidden="true"></i> {{ doc.fecha }}
                         &nbsp;
@@ -243,9 +243,9 @@
                 <tr>
                     <th>{{ i18n.trans('reference') }}</th>
                     <th>{{ i18n.trans('description') }}</th>
-                    <th class="text-right td-quantity">{{ i18n.trans('quantity') }}</th>
-                    <th class="text-right td-quantity">{{ i18n.trans('quantity-served') }}</th>
-                    <th class="text-right td-quantity">{{ i18n.trans('selected-quantity') }}</th>
+                    <th class="text-end td-quantity">{{ i18n.trans('quantity') }}</th>
+                    <th class="text-end td-quantity">{{ i18n.trans('quantity-served') }}</th>
+                    <th class="text-end td-quantity">{{ i18n.trans('selected-quantity') }}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -254,11 +254,11 @@
                         <td class="align-middle">{{ line.referencia }}</td>
                         <td class="align-middle">{{ line.descripcion | raw | nl2br }}</td>
                         <td>
-                            <input type="number" value="{{ line.cantidad }}" class="form-control text-right"
+                            <input type="number" value="{{ line.cantidad }}" class="form-control text-end"
                                    readonly="true"/>
                         </td>
                         <td class="{{ servido == 0 ? '' : 'table-warning' }}">
-                            <input type="number" value="{{ line.servido }}" class="form-control text-right"
+                            <input type="number" value="{{ line.servido }}" class="form-control text-end"
                                    readonly="true"/>
                         </td>
                         {% set newQuantity = line.cantidad - line.servido %}
@@ -266,7 +266,7 @@
                             <input type="hidden" class="to_serve" value="{{ newQuantity }}"/>
                             <input type="number" name="approve_quant_{{ line.primaryColumnValue() }}"
                                    value="{{ newQuantity }}" step="any"
-                                   class="form-control text-right to_be_served" autocomplete="off"/>
+                                   class="form-control text-end to_be_served" autocomplete="off"/>
                         </td>
                     </tr>
                 {% else %}
