--- a/Core/View/Master/EditListViewInLine.html.twig
+++ b/Core/View/Master/EditListViewInLine.html.twig
@@ -48,7 +48,7 @@
             <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
             <div class="card border-success shadow mb-2">
                 <div class="card-body p-2">
-                    <button class="btn btn-sm btn-outline-success" type="button" data-toggle="collapse" data-target="#{{ formName }}Collapse" aria-expanded="false">
+                    <button class="btn btn-sm btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#{{ formName }}Collapse" aria-expanded="false">
                         <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
                         {{ i18n.trans('add') }}
                     </button>
@@ -57,13 +57,13 @@
                 </div>
                 <div class="collapse" id="{{ formName }}Collapse">
                     <div class="card-body border-top">
-                        <div class="form-row align-items-end">
+                        <div class="row align-items-end">
                             <div class="col">
                                 {% for group in currentView.getColumns() %}
                                     {{ group.edit(currentView.model) | raw }}
                                 {% endfor %}
                             </div>
-                            <div class="col-sm-2 text-right">
+                            <div class="col-sm-2 text-end">
                                 <button class="btn btn-sm btn-success" type="submit">
                                     <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                                     <span class="d-none d-sm-inline-block">{{ i18n.trans('save') }}</span>
@@ -85,13 +85,13 @@
             <input type="hidden" name="code" value="{{ model.primaryColumnValue() }}"/>
             <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
             <div class="card shadow mb-2"{% if currentView.selected == model.primaryColumnValue() %} id="EditListViewSelected"{% endif %}>
-                <div class="form-row align-items-end">
+                <div class="row align-items-end">
                     <div class="col pt-2">
                         {% for group in currentView.getColumns() %}
                             {{ group.edit(model) | raw }}
                         {% endfor %}
                     </div>
-                    <div class="col-sm-2 text-right pb-2 pr-3">
+                    <div class="col-sm-2 text-end pb-2 pe-3">
                         {% if currentView.settings.btnDelete %}
                             <button type="button" class="btn btn-sm btn-danger" title="{{ i18n.trans('delete') }}"
                                     onclick="editListViewDelete('{{ currentView.getViewName() ~ counter }}');">
