--- a/Core/View/Master/ListController.html.twig
+++ b/Core/View/Master/ListController.html.twig
@@ -59,7 +59,7 @@
                 {# -- Options button -- #}
                 <div class="btn-group">
                     <div class="dropdown">
-                        <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-toggle="dropdown"
+                        <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-wrench fa-fw" aria-hidden="true"></i> {{ i18n.trans('options') }}
                         </button>
@@ -75,9 +75,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-5 text-right">
+            <div class="col-md-5 text-end">
                 <h1 class="h4 mb-0 d-none d-md-inline-block">
-                    {{ fsc.title }}<i class="{{ pageData.icon }} ml-3" aria-hidden="true"></i>
+                    {{ fsc.title }}<i class="{{ pageData.icon }} ms-3" aria-hidden="true"></i>
                 </h1>
             </div>
         </div>
@@ -87,7 +87,7 @@
         {% for viewName, view in fsc.views %}
             <li class="nav-item">
                 {% set active = (viewName == fsc.active) ? ' active' : '' %}
-                <a href="#{{ viewName }}" class="nav-link{{ active }}" data-toggle="tab" role="tab"
+                <a href="#{{ viewName }}" class="nav-link{{ active }}" data-bs-toggle="tab" role="tab"
                    aria-controls="{{ viewName }}" title="{{ view.title }}">
                     <i class="{{ view.icon }}" aria-hidden="true"></i>
                     {% if view.title | length > 15 %}
@@ -134,7 +134,7 @@
                 window.location.hash = this.hash;
                 $('html,body').scrollTop(scrollmem);
             });
-            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+            $('a[data-bs-toggle="tab"]').on('shown.bs.tab', function (e) {
                 if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) == false) {
                     $("input[name='query']:visible").focus();
                 }
