--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -74,7 +74,7 @@
                             {{ macros.showMenu(menuItem) }}
                         {% endfor %}
                     </ul>
-                    <ul class="navbar-nav flex-row ml-auto">
+                    <ul class="navbar-nav flex-row ms-auto">
                         <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
                             title="{{ trans('search') }}">
                             <a class="nav-link" href="MegaSearch">
@@ -87,7 +87,7 @@
                             </a>
                         </li>
                         <li class="nav-item dropdown" title="{{ trans('user') }}">
-                            <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle me-md-2" href="#" data-bs-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                             </a>
