--- a/Core/View/Master/PanelControllerBottom.html.twig
+++ b/Core/View/Master/PanelControllerBottom.html.twig
@@ -40,7 +40,7 @@
                                 {% set contActiveTab = contActiveTab + 1 %}
                                 <li class="nav-item">
                                     {% set active = (viewName == fsc.active) or (fsc.active == firstViewName and contActiveTab == 1) ? ' active' : '' %}
-                                    <a href="#{{ viewName }}" class="nav-link{{ active }}{{ disable }}" data-toggle="tab" role="tab" aria-controls="{{ viewName }}">
+                                    <a href="#{{ viewName }}" class="nav-link{{ active }}{{ disable }}" data-bs-toggle="tab" role="tab" aria-controls="{{ viewName }}">
                                         <i class="{{ view.icon }}" aria-hidden="true"></i>
                                         <span class="d-none d-sm-inline-block">&nbsp;{{ view.title }}</span>
                                         {% if view.count > 0 %}
