--- a/Core/View/Master/PanelControllerTop.html.twig
+++ b/Core/View/Master/PanelControllerTop.html.twig
@@ -81,12 +81,12 @@
                 {% endif %}
             </div>
             {# -- Top right text -- #}
-            <div class="col-md d-none d-md-inline-block text-right">
+            <div class="col-md d-none d-md-inline-block text-end">
                 {% set image = fsc.getImageUrl() %}
                 {% if image is empty %}
-                    <i class="{{ pageData.icon }} fa-3x pl-3 float-right" aria-hidden="true"></i>
+                    <i class="{{ pageData.icon }} fa-3x ps-3 float-end" aria-hidden="true"></i>
                 {% else %}
-                    <img src="{{ image }}" alt="{{ fsc.title }}" class="img-thumbnail ml-3 mb-2 float-right"/>
+                    <img src="{{ image }}" alt="{{ fsc.title }}" class="img-thumbnail ms-3 mb-2 float-end"/>
                 {% endif %}
                 <h1 class="h5 mb-0">{{ i18n.trans(pageData.title) }}</h1>
                 {% if fsc.hasData %}
@@ -102,7 +102,7 @@
             <li class="nav-item">
                 {% set active = (viewName == fsc.active) ? ' active' : '' %}
                 {% set disable = view.settings.active ? '' : ' disabled' %}
-                <a href="#{{ viewName }}" class="nav-link{{ active }}{{ disable }}" data-toggle="tab" role="tab"
+                <a href="#{{ viewName }}" class="nav-link{{ active }}{{ disable }}" data-bs-toggle="tab" role="tab"
                    aria-controls="{{ viewName }}">
                     <i class="{{ view.icon }}" aria-hidden="true"></i>
                     <span class="d-none d-sm-inline-block">{{ view.title }}</span>
@@ -148,7 +148,7 @@
     {% if show %}
         <div class="btn-group">
             <div class="dropdown">
-                <button class="btn btn-sm btn-secondary mr-3 dropdown-toggle" type="button" data-toggle="dropdown"
+                <button class="btn btn-sm btn-secondary me-3 dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-wrench fa-fw" aria-hidden="true"></i>
                     <span class="d-none d-lg-inline-block">{{ i18n.trans('options') }}</span>
@@ -176,7 +176,7 @@
             <span class="d-none d-lg-inline-block">{{ i18n.trans('print') }}</span>
         </a>
         <button type="button" class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only">{{ i18n.trans('more') }}</span>
         </button>
         <div class="dropdown-menu dropdown-menu-right">
@@ -189,7 +189,7 @@
                 {% endif %}
             {% endfor %}
             <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item" data-toggle="modal" data-target="#advancedExportModal">
+            <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#advancedExportModal">
                 <i class="fas fa-tools fa-fw" aria-hidden="true"></i>
                 {{ i18n.trans('advanced') }}
             </a>
@@ -215,11 +215,11 @@
                             <i class="fas fa-tools fa-fw" aria-hidden="true"></i>
                             {{ i18n.trans('advanced') }}
                         </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                            
                         </button>
                     </div>
-                    <div class="modal-body text-left">
+                    <div class="modal-body text-start">
                         <div class="form-group">
                             <select name="option" class="form-control">
                                 {% for key, option in fsc.exportManager.options() %}
@@ -247,7 +247,7 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        <div class="text-right">
+                        <div class="text-end">
                             <button type="submit" class="btn btn-primary">
                                 {{ i18n.trans('accept') }}
                             </button>
