--- a/Core/View/Tab/ApiAccess.html.twig
+++ b/Core/View/Tab/ApiAccess.html.twig
@@ -3,7 +3,7 @@
     <input type="hidden" name="activetab" value="{{ fsc.getCurrentView().getViewName() }}" />
     <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
     <div class="card shadow">
-        <div class="card-body text-right">
+        <div class="card-body text-end">
             <button type="submit" class="btn btn-sm btn-primary">
                 <i class="fas fa-save fa-fw"></i> {{ i18n.trans('save') }}
             </button>
@@ -62,7 +62,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="card-body text-right">
+        <div class="card-body text-end">
             <button type="submit" class="btn btn-sm btn-primary">
                 <i class="fas fa-save fa-fw"></i> {{ i18n.trans('save') }}
             </button>
