--- a/Core/View/Wizard-2.html.twig
+++ b/Core/View/Wizard-2.html.twig
@@ -55,7 +55,7 @@
                 <form action="#" method="post" class="form" id="formWizard">
                     <input type="hidden" name="action" value="step2"/>
                     {{ formToken() }}
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-sm-4">
                             <div class="form-group">
                                 {{ forms.simpleSelect('regimeniva', 'regimeniva', fsc.empresa.regimeniva,
@@ -80,16 +80,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-sm-auto">
-                            <div class="form-group form-check pr-3">
+                            <div class="form-group form-check pe-3">
                                 <input type="checkbox" name="defaultplan" value="1" id="checkboxPlan"
                                        class="form-check-input" checked=""/>
                                 <label for="checkboxPlan">{{ i18n.trans('load-def-acc-plan') }}</label>
                             </div>
                         </div>
                         <div class="col-sm-auto">
-                            <div class="form-group form-check pr-3">
+                            <div class="form-group form-check pe-3">
                                 {% if appSettings.get('default', 'ventasinstock') %}
                                     <input type="checkbox" name="ventasinstock" value="1" id="cbNoStock"
                                            class="form-check-input" checked=""/>
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="text-right">
+                    <div class="text-end">
                         <button type="submit" class="btn btn-primary" id="btnWizard">
                             {{ i18n.trans('continue') }}
                         </button>
